--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,10 +1,12 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d9d18d">  <td>20/09/13 20:04:42</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.initialize()[pri:0, instance:FrontDesk.LoginPageTest@175b9425]">&gt;&gt;initialize</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@111374580</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>20/09/13 20:04:48</td>   <td>5567</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.pageTitle()[pri:1, instance:FrontDesk.LoginPageTest@175b9425]">pageTitle</td> 
-  <td>main@111374580</td>   <td></td> </tr>
-<tr bgcolor="d9d18d">  <td>20/09/13 20:04:48</td>   <td>5580</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:FrontDesk.LoginPageTest@175b9425]">&lt;&lt;teardown</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@111374580</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>20/09/14 12:42:02</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;LoginPageTest.initialize()[pri:0, instance:FrontDesk.LoginPageTest@55f616cf]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>20/09/14 12:42:07</td>   <td>5931</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.login()[pri:2, instance:FrontDesk.LoginPageTest@55f616cf]">login</td> 
+  <td>main@212683148</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>20/09/14 12:42:07</td>   <td>5915</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginPageTest.pageTitle()[pri:1, instance:FrontDesk.LoginPageTest@55f616cf]">pageTitle</td> 
+  <td>main@212683148</td>   <td></td> </tr>
+<tr bgcolor="8b6791">  <td>20/09/14 12:42:09</td>   <td>7065</td> <td>&nbsp;</td><td title="&lt;&lt;LoginPageTest.teardown()[pri:0, instance:FrontDesk.LoginPageTest@55f616cf]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@212683148</td>   <td></td> </tr>
 </table>
