updated tests with regression tag and Added Appt Admin tests

--- a/test-output/old/Default suite/methods-not-run.html
+++ b/test-output/old/Default suite/methods-not-run.html
@@ -1,2 +1,5 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>FrontDesk.Apptadmintest.Apptadmin_CancelRecurringappointment<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Apptadmin_CancelRecurringappointment</i></td></tr>
+<tr><td>FrontDesk.Apptadmintest.Apptadmin_makeappointment<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Apptadmin_makeappointment</i></td></tr>
+<tr><td>FrontDesk.Apptadmintest.Apptadmin_Recurringappointment<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>Apptadmin_makeRecurringappointment</i></td></tr>
 </table>
