--- a/test-output/old/Suite/methods-not-run.html
+++ b/test-output/old/Suite/methods-not-run.html
@@ -1,2 +1,3 @@
 <h2>Methods that were not run</h2><table>
+<tr><td>FrontDesk.POS_Test.POSTest_paymentwith_Creditcard<br/>&nbsp;&nbsp;&nbsp;&nbsp;<i>POSTest paymentwith Creditcard</i></td></tr>
 </table>
