--- a/test-output/old/Suite/methods.html
+++ b/test-output/old/Suite/methods.html
@@ -1,6 +1,42 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3e762">  <td>20/11/11 13:37:27</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Addguesttest.addguest()[pri:6, instance:FrontDesk.Addguesttest@2a266d09]">addguest</td> 
-  <td>main@1832532108</td>   <td></td> </tr>
+<tr bgcolor="d3ccb2">  <td>21/05/11 13:00:57</td>   <td>0</td> <td>&nbsp;</td><td title="&gt;&gt;Membermanager.initialize()[pri:0, instance:FrontDesk.Membermanager@40cb8df7]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>21/05/11 13:01:14</td>   <td>17313</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;POS_Test.initialize()[pri:0, instance:FrontDesk.POS_Test@13b13b5d]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>21/05/11 13:01:31</td>   <td>34017</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POS_Test.POSTest_Paymentwith_cash()[pri:1, instance:FrontDesk.POS_Test@13b13b5d]">POSTest_Paymentwith_cash</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>21/05/11 13:02:07</td>   <td>70229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="POS_Test.POSTest_Paymentwith_coupon()[pri:3, instance:FrontDesk.POS_Test@13b13b5d]">POSTest_Paymentwith_coupon</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="ddbd7e">  <td>21/05/11 13:02:44</td>   <td>106850</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Addguesttest.initialize()[pri:0, instance:FrontDesk.Addguesttest@2892dae4]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="ddbd7e">  <td>21/05/11 13:03:02</td>   <td>125099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Addguesttest.addguest()[pri:1, instance:FrontDesk.Addguesttest@2892dae4]">addguest</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="ddbd7e">  <td>21/05/11 13:03:52</td>   <td>174963</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Addguesttest.teardown()[pri:0, instance:FrontDesk.Addguesttest@2892dae4]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="e58ef6">  <td>21/05/11 13:03:52</td>   <td>174994</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;QuicksalerenewalTest.initialize()[pri:0, instance:FrontDesk.QuicksalerenewalTest@355ce81c]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="e58ef6">  <td>21/05/11 13:04:09</td>   <td>191789</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QuicksalerenewalTest.renewalcontract()[pri:1, instance:FrontDesk.QuicksalerenewalTest@355ce81c]">renewalcontract</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="e58ef6">  <td>21/05/11 13:05:17</td>   <td>259681</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QuicksalerenewalTest.renewalcontract_Creditcard()[pri:2, instance:FrontDesk.QuicksalerenewalTest@355ce81c]">renewalcontract_Creditcard</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="e58ef6">  <td>21/05/11 13:06:24</td>   <td>327482</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QuicksalerenewalTest.renewalcontract_splitpayment()[pri:3, instance:FrontDesk.QuicksalerenewalTest@355ce81c]">renewalcontract_splitpayment</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="e58ef6">  <td>21/05/11 13:07:28</td>   <td>391090</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;QuicksalerenewalTest.teardown()[pri:0, instance:FrontDesk.QuicksalerenewalTest@355ce81c]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="d3ccb2">  <td>21/05/11 13:07:28</td>   <td>391528</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Membermanager.memebermanager_takepayment()[pri:1, instance:FrontDesk.Membermanager@40cb8df7]">memebermanager_takepayment</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="d3ccb2">  <td>21/05/11 13:08:04</td>   <td>427487</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Membermanager.memebermanager_takepayment_Cardonfile()[pri:2, instance:FrontDesk.Membermanager@40cb8df7]">memebermanager_takepayment_Cardonfile</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="d3ccb2">  <td>21/05/11 13:08:31</td>   <td>454626</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Membermanager.changerequest()[pri:3, instance:FrontDesk.Membermanager@40cb8df7]">changerequest</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>21/05/11 13:08:58</td>   <td>481162</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;QuickSales_newmember.initialize()[pri:0, instance:FrontDesk.QuickSales_newmember@29647f75]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>21/05/11 13:09:15</td>   <td>498225</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QuickSales_newmember.QuickSalesTest()[pri:1, instance:FrontDesk.QuickSales_newmember@29647f75]">QuickSalesTest</td> 
+  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="6773a3">  <td>21/05/11 13:10:48</td>   <td>590982</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;QuickSales_newmember.teardown()[pri:0, instance:FrontDesk.QuickSales_newmember@29647f75]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
+<tr bgcolor="d3ccb2">  <td>21/05/11 13:10:48</td>   <td>591012</td> <td>&nbsp;</td><td title="&lt;&lt;Membermanager.teardown()[pri:0, instance:FrontDesk.Membermanager@40cb8df7]">&lt;&lt;teardown</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1471086700</td>   <td></td> </tr>
 </table>
