--- a/test-output/index.html
+++ b/test-output/index.html
@@ -51,7 +51,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\ukollu\AppData\Local\Temp\testng-eclipse--1764351773\testng-customsuite.xml</span>
+                    <span>C:\Users\ukollu\AppData\Local\Temp\testng-eclipse--1990761814\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -104,7 +104,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="FrontDesk.QuicksalerenewalTest" class="method navigator-link" hash-for-method="renewalcontract">renewalcontract</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="FrontDesk.Apptadmintest" class="method navigator-link" hash-for-method="Apptadmin_cancelappointment">Apptadmin_cancelappointment</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -122,16 +122,16 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">FrontDesk.QuicksalerenewalTest</span>
+              <span class="class-name">FrontDesk.Apptadmintest</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="renewalcontract">
-                  </a> <!-- renewalcontract -->
-                  <span class="method-name">renewalcontract</span>
+                  <a name="Apptadmin_cancelappointment">
+                  </a> <!-- Apptadmin_cancelappointment -->
+                  <span class="method-name">Apptadmin_cancelappointment</span>
                   <em>
-(Quicksale_renewal contract)                  </em>
+(Apptadmin_cancelappointment)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -139,7 +139,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\ukollu\AppData\Local\Temp\testng-eclipse--1764351773\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\ukollu\AppData\Local\Temp\testng-eclipse--1990761814\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -148,7 +148,7 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;FrontDesk.QuicksalerenewalTest&quot;/&gt;
+      &lt;class name=&quot;FrontDesk.Apptadmintest&quot;/&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -190,14 +190,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'renewalcontract')
-data.setCell(0, 2, 'FrontDesk.QuicksalerenewalTest')
-data.setCell(0, 3, 73681);
+data.setCell(0, 1, 'Apptadmin_cancelappointment')
+data.setCell(0, 2, 'FrontDesk.Apptadmintest')
+data.setCell(0, 3, 31778);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 1 minutes</span>
+              <span class="suite-total-time">Total running time: 31 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -212,9 +212,20 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">0 ignored methods</span>
+            <span class="header-content">3 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
+            <div class="ignored-class-div">
+              <span class="ignored-class-name">FrontDesk.Apptadmintest</span>
+              <div class="ignored-methods-div">
+                <span class="ignored-method-name">Apptadmin_CancelRecurringappointment</span>
+                <br/>
+                <span class="ignored-method-name">Apptadmin_makeappointment</span>
+                <br/>
+                <span class="ignored-method-name">Apptadmin_Recurringappointment</span>
+                <br/>
+              </div> <!-- ignored-methods-div -->
+            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -223,10 +234,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">FrontDesk.QuicksalerenewalTest</div> <!-- chronological-class-name -->
-              <div class="test-method">
-                <span class="method-name">renewalcontract</span>
+              <div class="chronological-class-name">FrontDesk.Apptadmintest</div> <!-- chronological-class-name -->
+              <div class="configuration-class before">
+                <span class="method-name">initialize</span>
                 <span class="method-start">0 ms</span>
+              </div> <!-- configuration-class before -->
+              <div class="test-method">
+                <span class="method-name">Apptadmin_cancelappointment</span>
+                <span class="method-start">25565 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
