--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="d3e762">  <td>20/11/13 15:34:05</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="QuicksalerenewalTest.renewalcontract()[pri:5, instance:FrontDesk.QuicksalerenewalTest@2a266d09]">renewalcontract</td> 
-  <td>main@1832532108</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>21/05/17 16:24:02</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Apptadmintest.initialize()[pri:0, instance:FrontDesk.Apptadmintest@3c947bc5]">&gt;&gt;initialize</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1292040526</td>   <td></td> </tr>
+<tr bgcolor="ac9068">  <td>21/05/17 16:24:27</td>   <td>25560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Apptadmintest.Apptadmin_cancelappointment()[pri:2, instance:FrontDesk.Apptadmintest@3c947bc5]">Apptadmin_cancelappointment</td> 
+  <td>main@1292040526</td>   <td></td> </tr>
 </table>
